# uKad

./: .gitignore  LICENSE  README.md  example_report.json  example_report.txt  kicad_rf_klopfenstein_implementation_spec.md  pyproject.toml
addon/: __init__.py  board_extract.py  board_insert.py  dialog.py  footprint_gen.py  fp_canvas.py  ipc_client.py  kicad_compat.py  live_insert.py  plugin_action.py  selection.py  sparam_view.py  ui_main.py
rfcore/: __init__.py  cache.py  config.py  klopfenstein.py  materials_ro4350b.py  microstrip.py  network.py  optimizer_em.py  optimizer_fast.py  plots.py  reports.py  solver_base.py  taper_assembly.py  taper_body.py  warnings.py
rfcore/discontinuities/: __init__.py  base.py  landing.py  pad.py  return_path.py  step.py  stub.py  via_ground.py  via_signal.py
rfcore/export/: __init__.py  csv_export.py  geometry.py  openems_adapter.py  touchstone.py
scripts/: debug_placement.py  debug_selected_tracks.py  generate_example_footprint.py  kicad_integration_test.py
test_exports/: freq.csv  geom.csv  taper.kicad_mod  taper.ts  taper_compat.s2p
tests/: __init__.py  test_assembly.py  test_integration.py  test_klopfenstein.py  test_microstrip.py  test_network.py
