[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kicad-rf"
version = "0.1.0"
description = "KiCad RF Tool v1: Klopfenstein Microstrip Taper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
plot = [
    "matplotlib>=3.5",
]
ui = [
    "wxPython>=4.2",
    "matplotlib>=3.5",
]
em = [
    "CSXCAD>=0.6",
    "openEMS>=0.0.35",
]
kicad = [
    "kicad-python>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["rfcore*", "addon*"]
